Fixed the POST request. Need to perform css on the vocabulary chapters on the frontend since they are not aligning in the center anymore

--- a/Frontend/src/styles/Vocabulary.css
+++ b/Frontend/src/styles/Vocabulary.css
@@ -13,8 +13,9 @@ body {
 .workspace-of-words {
     margin-top: 100px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    width: 100%;
+    align-items: start;
 }
 
 .add-word-button {
